[gd_scene format=3 uid="uid://leveleditor0001"]

[ext_resource type="Script" path="res://scripts/ui/level_editor.gd" id="1"]

[node name="LevelEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="HeaderRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
theme_override_font_sizes/font_size = 38
text = "LEVEL EDITOR"

[node name="BackButton" type="Button" parent="VBoxContainer/HeaderRow"]
custom_minimum_size = Vector2(200, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "BACK TO PACKS"

[node name="Body" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 390

[node name="LeftPanel" type="VBoxContainer" parent="VBoxContainer/Body"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PackIdLabel" type="Label" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
text = "Pack ID"

[node name="PackIdInput" type="LineEdit" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
placeholder_text = "my-pack"

[node name="PackNameLabel" type="Label" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
text = "Pack Name"

[node name="PackNameInput" type="LineEdit" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
placeholder_text = "My Pack"

[node name="AuthorLabel" type="Label" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
text = "Author"

[node name="AuthorInput" type="LineEdit" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
placeholder_text = "Your Name"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
text = "Description"

[node name="DescriptionInput" type="TextEdit" parent="VBoxContainer/Body/LeftPanel"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2

[node name="LevelHeader" type="HBoxContainer" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer/Body/LeftPanel/LevelHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Levels"

[node name="AddLevelButton" type="Button" parent="VBoxContainer/Body/LeftPanel/LevelHeader"]
custom_minimum_size = Vector2(36, 30)
layout_mode = 2
text = "+"

[node name="RemoveLevelButton" type="Button" parent="VBoxContainer/Body/LeftPanel/LevelHeader"]
custom_minimum_size = Vector2(36, 30)
layout_mode = 2
text = "-"

[node name="DuplicateLevelButton" type="Button" parent="VBoxContainer/Body/LeftPanel/LevelHeader"]
custom_minimum_size = Vector2(36, 30)
layout_mode = 2
text = "D"

[node name="MoveLevelUpButton" type="Button" parent="VBoxContainer/Body/LeftPanel/LevelHeader"]
custom_minimum_size = Vector2(36, 30)
layout_mode = 2
text = "↑"

[node name="MoveLevelDownButton" type="Button" parent="VBoxContainer/Body/LeftPanel/LevelHeader"]
custom_minimum_size = Vector2(36, 30)
layout_mode = 2
text = "↓"

[node name="LevelList" type="ItemList" parent="VBoxContainer/Body/LeftPanel"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 3

[node name="LevelNameLabel" type="Label" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
text = "Level Name"

[node name="LevelNameInput" type="LineEdit" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
placeholder_text = "Level name"

[node name="LevelDescriptionLabel" type="Label" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
text = "Level Description"

[node name="LevelDescriptionInput" type="TextEdit" parent="VBoxContainer/Body/LeftPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="GridConfig" type="HBoxContainer" parent="VBoxContainer/Body/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RowsLabel" type="Label" parent="VBoxContainer/Body/LeftPanel/GridConfig"]
layout_mode = 2
text = "Rows"

[node name="RowsInput" type="SpinBox" parent="VBoxContainer/Body/LeftPanel/GridConfig"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
min_value = 1.0
max_value = 30.0
value = 10.0

[node name="ColsLabel" type="Label" parent="VBoxContainer/Body/LeftPanel/GridConfig"]
layout_mode = 2
text = "Cols"

[node name="ColsInput" type="SpinBox" parent="VBoxContainer/Body/LeftPanel/GridConfig"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 6.0

[node name="RightPanel" type="VBoxContainer" parent="VBoxContainer/Body"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="GridLabel" type="Label" parent="VBoxContainer/Body/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Level Grid"

[node name="GridScroll" type="ScrollContainer" parent="VBoxContainer/Body/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Body/RightPanel/GridScroll"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2

[node name="RightControls" type="VBoxContainer" parent="VBoxContainer/Body/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PaletteLabel" type="Label" parent="VBoxContainer/Body/RightPanel/RightControls"]
layout_mode = 2
text = "Brush"

[node name="PaletteSelect" type="OptionButton" parent="VBoxContainer/Body/RightPanel/RightControls"]
layout_mode = 2

[node name="DirectionLabel" type="Label" parent="VBoxContainer/Body/RightPanel/RightControls"]
visible = false
layout_mode = 2
text = "Force Arrow Direction"

[node name="DirectionSelect" type="OptionButton" parent="VBoxContainer/Body/RightPanel/RightControls"]
visible = false
layout_mode = 2

[node name="PowerupTypeLabel" type="Label" parent="VBoxContainer/Body/RightPanel/RightControls"]
visible = false
layout_mode = 2
text = "Power-up Brick Type"

[node name="PowerupTypeSelect" type="OptionButton" parent="VBoxContainer/Body/RightPanel/RightControls"]
visible = false
layout_mode = 2

[node name="ActionRow" type="HBoxContainer" parent="VBoxContainer/Body/RightPanel/RightControls"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UndoButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls/ActionRow"]
custom_minimum_size = Vector2(90, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "UNDO"

[node name="RedoButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls/ActionRow"]
custom_minimum_size = Vector2(90, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "REDO"

[node name="TestButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls/ActionRow"]
custom_minimum_size = Vector2(120, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0, 0.9, 1, 1)
text = "TEST LEVEL"

[node name="ExportButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls/ActionRow"]
custom_minimum_size = Vector2(130, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.85, 0.35, 1)
text = "EXPORT PACK"

[node name="SaveButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls/ActionRow"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.15, 0.95, 0.65, 1)
theme_override_font_sizes/font_size = 22
text = "SAVE PACK"

[node name="DeleteButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls/ActionRow"]
custom_minimum_size = Vector2(150, 42)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.45, 0.45, 1)
text = "DELETE PACK"
disabled = true

[node name="OpenSavedPacksButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "OPEN SAVED PACKS (EDIT)"

[node name="OpenExportsFolderButton" type="Button" parent="VBoxContainer/Body/RightPanel/RightControls"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.85, 0.55, 1)
text = "OPEN EXPORT FOLDER"

[node name="FooterRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/FooterRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Ready"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Delete Pack"
ok_button_text = "Delete"
dialog_text = "Delete this pack?"

[connection signal="pressed" from="VBoxContainer/HeaderRow/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/LeftPanel/LevelHeader/AddLevelButton" to="." method="_on_add_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/LeftPanel/LevelHeader/RemoveLevelButton" to="." method="_on_remove_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/LeftPanel/LevelHeader/DuplicateLevelButton" to="." method="_on_duplicate_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/LeftPanel/LevelHeader/MoveLevelUpButton" to="." method="_on_move_level_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/LeftPanel/LevelHeader/MoveLevelDownButton" to="." method="_on_move_level_down_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/Body/LeftPanel/LevelList" to="." method="_on_level_list_item_selected"]
[connection signal="text_changed" from="VBoxContainer/Body/LeftPanel/LevelNameInput" to="." method="_on_level_name_input_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Body/LeftPanel/LevelDescriptionInput" to="." method="_on_level_description_input_text_changed"]
[connection signal="value_changed" from="VBoxContainer/Body/LeftPanel/GridConfig/RowsInput" to="." method="_on_rows_input_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Body/LeftPanel/GridConfig/ColsInput" to="." method="_on_cols_input_value_changed"]
[connection signal="item_selected" from="VBoxContainer/Body/RightPanel/RightControls/PaletteSelect" to="." method="_on_palette_select_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Body/RightPanel/RightControls/DirectionSelect" to="." method="_on_direction_select_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Body/RightPanel/RightControls/PowerupTypeSelect" to="." method="_on_powerup_type_select_item_selected"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/ActionRow/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/ActionRow/RedoButton" to="." method="_on_redo_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/ActionRow/TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/ActionRow/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/ActionRow/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/ActionRow/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/OpenSavedPacksButton" to="." method="_on_open_saved_packs_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Body/RightPanel/RightControls/OpenExportsFolderButton" to="." method="_on_open_exports_folder_button_pressed"]
[connection signal="confirmed" from="DeleteConfirmDialog" to="." method="_on_delete_confirm_dialog_confirmed"]
